=== 0.5.0.2 (2007-01-01)

* Fixed String#to_time to raise error correctly for invalid time stamps.

* Improved code coverage - now at 99.2%.

=== 0.5.0.1 (2007-12-31)

* Added a stub for Sequel::Model that auto-loads sequel_model.

* Changed Sequel.method_missing and Database.adapter_class to raise AdapterNotFound if an adapter could not be loaded.

* Fixed behavior of error trap in sequel command line tool.

=== 0.5 (2007-12-30)

* Removed model code into separate sub-project. Rearranged trunk into core, model and model_plugins.

=== 0.4.5 (2007-12-25)

* Added rdoc for new alter_table functionality (#109).

* Fixed update_sql with array sub-item keys (#110).

* Refactored model specs.

* Added Model#update as alias to #set.

* Refactored validations code. Renamed Model.validations? into Model.has_validations?.

* Added initial Model validations (Thanks Lance Carlson)

* Added Database#set_column_default method (thanks Jim Morris.)

* Removed warning on uninitialized @transform value (thanks Jim Morris).

=== 0.4.4.2 (2007-12-20)

* Fixed parsing errors in Ruby 1.9.

* Fixed sync problem in connection_pool_spec.

* Changed String#to_time to raise Error::InvalidValue if Time.parse fails.

* Refactored sequel error classes.

=== 0.4.4.1 (2007-12-19)

* Fixed schema generation code to use field quoting and support adapter-specific literalization of default values (#108).

=== 0.4.4 (2007-12-17)

* Implemented Database#rename_table (#104).

* Fixed drop_index in mysql adapter (#103).

* Added ALTER TABLE specs for postgres, sqlite and mysql adapters. Added custom alter_table behavior for sqlite and mysql adapters (#101, #102).

* Added direct Database API for altering tables.

* Added Database#alter_table method with support for adding, dropping, renaming, modifying columns and adding and droppping indexes.

* Added #unique schema method for defining unique indexes (thanks Dado).

* Implemented unfolding of #each calls inside sequelizer blocks (thanks Jim Morris).
